--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,20 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assign 0 to each variable that stores the victories\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf_wins = 0 \n",
+    "saruman_wins = 0\n"
    ]
   },
   {
@@ -67,9 +60,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Execution of spell clashes\n",
+    "for i in range(len(gandalf)):\n",
+    "    if gandalf[i] < saruman[i]:\n",
+    "        saruman_wins += 1\n",
+    "    elif gandalf[i] > saruman[i]:\n",
+    "        gandalf_wins += 1 \n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf Wins\n"
+     ]
+    }
+   ],
+   "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "if gandalf_wins < saruman_wins:\n",
+    "    print(\"Saruman Wins\")\n",
+    "elif gandalf_wins > saruman_wins:\n",
+    "    print(\"Gandalf Wins\")\n",
+    "else:\n",
+    "    print(\"Tie\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saruman_wins\n"
    ]
   },
   {
@@ -116,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,40 +181,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assign spell power lists to variables\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
-    "\n",
-    "\n",
-    "# Execution of spell clashes\n",
-    "\n",
-    "\n",
-    "\n",
-    "# check for 3 wins in a row\n",
-    "\n",
-    "\n",
-    "# check the winner\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Average of each of the spell lists.\n",
+    "# Assign spell power lists to variables\n",
+    "g=[]\n",
+    "s=[]\n",
+    "for i in gandalf:\n",
+    "    a = POWER.get(i)\n",
+    "    g.append(a)\n",
+    "for i in saruman:\n",
+    "    b = POWER.get(i)\n",
+    "    s.append(b)\n",
     "\n"
    ]
   },
@@ -180,10 +201,132 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf Wins!\n"
+     ]
+    }
+   ],
    "source": [
+    "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
+    "\n",
+    "gandalf_wins2 = []\n",
+    "saruman_wins2 = [] \n",
+    "# Execution of spell clashes\n",
+    "for i in range(len(g)):\n",
+    "    if g[i] < s[i]:\n",
+    "        saruman_wins2.append(1)\n",
+    "        gandalf_wins2.append(0)\n",
+    "    elif g[i] > s[i]:\n",
+    "        gandalf_wins2.append(1)\n",
+    "        saruman_wins2.append(0)\n",
+    "    else:\n",
+    "        saruman_wins2.append(1)\n",
+    "        gandalf_wins2.append(1)\n",
+    "\n",
+    "\n",
+    "# check for 3 wins in a row\n",
+    "checker_g = 0\n",
+    "checker_s = 0\n",
+    "for i in gandalf_wins2:\n",
+    "    if i == 1:\n",
+    "        checker_g += 1\n",
+    "        if checker_g == 3:\n",
+    "            print(\"Gandalf Wins!\")\n",
+    "    else:\n",
+    "        checker_g = 0\n",
+    "for i in saruman_wins2:\n",
+    "    if i == 1:\n",
+    "        checker_s += 1\n",
+    "        if checker_s == 3:\n",
+    "            print(\"Saruman Wins!!\")\n",
+    "    else:\n",
+    "        checker_s = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average of the spells of Gandalf is 35.0\n",
+      "The average of the spells of saruman is 30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Average of each of the spell lists.\n",
+    "avr_gandalf = sum(g)/len(g)\n",
+    "avr_saruman = sum(s)/len(s)\n",
+    "print(\"The average of the spells of Gandalf is\", avr_gandalf)\n",
+    "print(\"The average of the spells of saruman is\", avr_saruman)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard deviation of Gandalf is 16.882\n",
+      "The standard deviation of Saruman is 15.564\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "print(\"The standard deviation of Gandalf is\", round(np.std(g),3))\n",
+    "print(\"The standard deviation of Saruman is\", round(np.std(s),3))   \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-21-7d953551106f>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-7d953551106f>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
    ]
   },
   {
@@ -210,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
