--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,44 +57,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yeah! (4, 5)\n",
+      "OOOPS\n",
+      "OOOPS\n",
+      "OOOPS\n",
+      "OOOPS\n",
+      "Yeah! (4, 5)\n",
+      "OOOPS\n",
+      "Yeah! (5, 7)\n",
+      "OOOPS\n",
+      "Yeah! (2, 2)\n",
+      "OOOPS\n",
+      "OOOPS\n",
+      "OOOPS\n",
+      "OOOPS\n",
+      "Yeah! (-3, 2)\n",
+      "OOOPS\n",
+      "Yeah! (-3, 2)\n",
+      "Yeah! (5, 7)\n",
+      "Yeah! (5, 7)\n",
+      "Yeah! (2, 2)\n",
+      "OOOPS\n",
+      "OOOPS\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "for i in points:\n",
+    "    if points.count(i) > 1:\n",
+    "        print(\"Yeah!\", i)\n",
+    "    else:\n",
+    "        print(\"OOOPS\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 arrows have fallen in Q1\n",
+      "2 arrows have fallen in Q2\n",
+      "2 arrows have fallen in Q3\n",
+      "8 arrows have fallen in q4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "q1 = []\n",
+    "q2 = []\n",
+    "q3 = []\n",
+    "q4 = []\n",
+    "for a,b in points:\n",
+    "    if a>0 and b>0:\n",
+    "        q1.append((a,b))\n",
+    "    elif a>0 and b<0:\n",
+    "        q2.append((a,b))\n",
+    "    elif a<0 and b<0:\n",
+    "        q3.append((a,b))\n",
+    "    else:\n",
+    "        q4.append((a,b))\n",
+    "print(len(q1), \"arrows have fallen in Q1\")\n",
+    "print(len(q2), \"arrows have fallen in Q2\")\n",
+    "print(len(q3), \"arrows have fallen in Q3\")\n",
+    "print(len(q4), \"arrows have fallen in q4\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2) is the closest point to the center and is 2.0 away\n",
+      "(0, -2) is the closest point to the center and is 2.0 away\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Find the point closest to the center. Calculate its distance to the center\n",
+    "# Defining a function that calculates the distance to the center can help.\n",
+    "distances = []\n",
+    "info = []\n",
+    "for a,b in points:\n",
+    "    dist = ((a-0)**2+(b-0)**2)**1/2\n",
+    "    info.append((a,b,dist))\n",
+    "    distances.append(dist)\n",
+    "\n",
+    "for a,b,c in info:\n",
+    "    if c == min(distances):\n",
+    "        print((a,b), \"is the closest point to the center and is\",c, \"away\")\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You will need to pick 12 arrows\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "in_the_forest=0 \n",
+    "for a,b,c in info:\n",
+    "    if c > 9:\n",
+    "        in_the_forest += 1\n",
+    "    else:\n",
+    "        pass\n",
+    "print(\"You will need to pick\", in_the_forest, \"arrows\")"
    ]
   },
   {
@@ -121,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
