--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,49 +25,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
+    "import random\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
-    "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "\n",
+    "possibilities = [\"R\", \"P\", \"S\"]\n",
+    "max_games = 3\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "win = max_games /2 + 0.5\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
-    "\n",
+    "def ran(my_list):\n",
+    "    return random.choice(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "choose Rock [R], Paper [P] or Scissors [S]: P\n",
+      "You chose, P the computer chose R . You win this round, lucky human...\n",
+      "choose Rock [R], Paper [P] or Scissors [S]: P\n",
+      "You chose, P the computer chose S . The computer wins this round\n",
+      "choose Rock [R], Paper [P] or Scissors [S]: P\n",
+      "You chose, P the computer chose R . You win this round, lucky human...\n",
+      "choose Rock [R], Paper [P] or Scissors [S]: P\n",
+      "You chose, P the computer chose R . You win this round, lucky human...\n",
+      "Human wins this time... The final score is: 3 - 1\n"
+     ]
+    }
+   ],
+   "source": [
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
-    "\n",
+    "def choose():\n",
+    "    while True:\n",
+    "        global hu\n",
+    "        hu = input(\"choose Rock [R], Paper [P] or Scissors [S]: \")\n",
+    "        if hu in ['R', 'P', 'S']:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Wrong input. R/S/P\")\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
-    "\n",
-    "    \n",
+    "def combat():\n",
+    "    global r\n",
+    "    r = ran(possibilities)\n",
+    "    if hu == r:\n",
+    "        return 0\n",
+    "    elif hu == 'P' and r == 'R':\n",
+    "        return 2\n",
+    "    elif hu == 'P' and r == 'S':\n",
+    "        return 1\n",
+    "    elif hu == 'R' and r == 'S':\n",
+    "        return 2\n",
+    "    elif hu == 'R' and r == 'P':\n",
+    "        return 1 \n",
+    "    elif hu == 'S' and r == 'R':\n",
+    "        return 1 \n",
+    "    elif hu == 'S' and r == 'P':\n",
+    "        return 2\n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def scoreboard():\n",
+    "    if c == 1:\n",
+    "        print(\"You chose,\", hu, \"the computer chose\",r,\". The computer wins this round\")\n",
+    "    elif c == 2:\n",
+    "        print(\"You chose,\", hu, \"the computer chose\",r,\". You win this round, lucky human...\")\n",
+    "    elif c == 0:\n",
+    "        print(\"You chose,\", hu, \"the computer chose\",r,\". It's a tie\")\n",
+    "    else:\n",
+    "        pass\n",
+    "            \n",
+    "    \n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "wins_h = 0 \n",
+    "wins_c = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
-    "\n",
+    "while wins_h < win and wins_c < win: \n",
+    "    choose()\n",
+    "    c = combat()\n",
+    "    c\n",
+    "    scoreboard()\n",
+    "    if c == 1:\n",
+    "        wins_c +=1 \n",
+    "    elif c == 2:\n",
+    "        wins_h += 1\n",
+    "    else:\n",
+    "        pass\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "def winner():\n",
+    "    if wins_h >= win:\n",
+    "        print(\"Human wins this time... The final score is:\", wins_h,\"-\",wins_c)\n",
+    "    elif wins_c >= win:\n",
+    "        print(\"COMPUTER WINS!!! The final score is:\", wins_h,\"-\",wins_c)\n",
+    "    else:\n",
+    "        pass\n",
+    "winner()"
    ]
   },
   {
@@ -93,58 +166,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an odd number to define the maximum amount of games: 5\n",
+      "We are going to play 5 games.\n",
+      "Choose Rock [R], Paper [P], Scissors [S], Lizard [L] or Spock [Sp] : P\n",
+      "You chose, P the computer chose L . The computer wins this round\n",
+      "Choose Rock [R], Paper [P], Scissors [S], Lizard [L] or Spock [Sp] : L\n",
+      "You chose, L the computer chose R . The computer wins this round\n",
+      "Choose Rock [R], Paper [P], Scissors [S], Lizard [L] or Spock [Sp] : Sp\n",
+      "You chose, Sp the computer chose L . The computer wins this round\n",
+      "COMPUTER WINS!!! The final score is: 0 - 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
-    "\n",
-    "\n",
+    "def number():\n",
+    "    while True:\n",
+    "        global games\n",
+    "        num = int(input(\"Enter an odd number to define the maximum amount of games: \"))\n",
+    "        if num %2 > 0:\n",
+    "            print(\"We are going to play\", num, \"games.\")\n",
+    "            games = num\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"You entered an even number\")\n",
+    "number()\n",
     "# Assign a list of 5 possible options.\n",
-    "\n",
+    "possibilities_2 = [\"R\", \"P\", \"S\", \"L\",\"Sp\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
-    "\n",
+    "max_games_2 = games\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "win_2 = max_games_2 /2 + 0.5\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "    #ran(possibilities_2)\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
-    "\n",
+    "def choose_2():\n",
+    "    while True:\n",
+    "        global hu_2\n",
+    "        hu_2 = input(\"Choose Rock [R], Paper [P], Scissors [S], Lizard [L] or Spock [Sp] : \")\n",
+    "        if hu_2 in ['R', 'P', 'S', 'L', 'Sp']:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Wrong input. R/S/P/L/Sp\")\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
-    " \n",
+    "def combat_2():\n",
+    "    global r_2\n",
+    "    r_2 = ran(possibilities_2)\n",
+    "    if hu_2 == r_2:\n",
+    "        return 0\n",
+    "    elif hu_2 == 'P' and r_2 == 'R':\n",
+    "        return 2\n",
+    "    elif hu_2 == 'P' and r_2 == 'S':\n",
+    "        return 1\n",
+    "    elif hu_2 == 'P' and r_2 =='Sp':\n",
+    "        return 2\n",
+    "    elif hu_2 == 'P' and r_2 == 'L':\n",
+    "        return 1\n",
+    "    elif hu_2 == 'R' and r_2 == 'S':\n",
+    "        return 2\n",
+    "    elif hu_2 == 'R' and r_2 == 'P':\n",
+    "        return 1 \n",
+    "    elif hu_2 == 'R' and r_2 == 'L':\n",
+    "        return 2 \n",
+    "    elif hu_2 == 'R' and r_2 == 'Sp':\n",
+    "        return 1 \n",
+    "    elif hu_2 == 'S' and r_2 == 'R':\n",
+    "        return 1 \n",
+    "    elif hu_2 == 'S' and r_2 == 'P':\n",
+    "        return 2\n",
+    "    elif hu_2 == 'S' and r_2 == 'L':\n",
+    "        return 2\n",
+    "    elif hu_2 == 'S' and r_2 == 'Sp':\n",
+    "        return 1 \n",
+    "    elif hu_2 =='L' and r_2 == 'R':\n",
+    "        return 1\n",
+    "    elif hu_2 =='L' and r_2 == 'P':\n",
+    "        return 2\n",
+    "    elif hu_2 =='L' and r_2 == 'S':\n",
+    "        return 1 \n",
+    "    elif hu_2 =='L' and r_2 == 'Sp':\n",
+    "        return 2 \n",
+    "    elif hu_2 =='Sp' and r_2 == 'R':\n",
+    "        return 2 \n",
+    "    elif hu_2 =='Sp' and r_2 == 'P':\n",
+    "        return 1\n",
+    "    elif hu_2 =='Sp' and r_2 == 'S':\n",
+    "        return 2 \n",
+    "    elif hu_2 =='Sp' and r_2 == 'L':\n",
+    "        return 1\n",
+    "    else:\n",
+    "        print(hu_2, r_2)\n",
     "\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def scoreboard_2():\n",
+    "    if c_2 == 1:\n",
+    "        print(\"You chose,\", hu_2, \"the computer chose\",r_2,\". The computer wins this round\")\n",
+    "    elif c_2 == 2:\n",
+    "        print(\"You chose,\", hu_2, \"the computer chose\",r_2,\". You win this round, lucky human...\")\n",
+    "    elif c_2 == 0:\n",
+    "        print(\"You chose,\", hu_2, \"the computer chose\",r_2,\". It's a tie\")\n",
+    "    else:\n",
+    "        pass\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "wins_computer = 0 \n",
+    "wins_human = 0\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
+    "while wins_human < win_2 and wins_computer < win_2: \n",
+    "    choose_2()\n",
+    "    c_2 = combat_2()\n",
+    "    c_2\n",
+    "    scoreboard_2()\n",
+    "    if c_2 == 1:\n",
+    "        wins_computer +=1 \n",
+    "    elif c_2 == 2:\n",
+    "        wins_human += 1\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
     "    \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "\n"
+    "def winner_2():\n",
+    "    if wins_human >= win_2:\n",
+    "        print(\"Human wins this time... The final score is:\", wins_human,\"-\",wins_computer)\n",
+    "    elif wins_computer >= win_2:\n",
+    "        print(\"COMPUTER WINS!!! The final score is:\", wins_human,\"-\",wins_computer)\n",
+    "    else:\n",
+    "        pass\n",
+    "winner_2()"
    ]
   },
   {
@@ -171,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
