--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,54 +32,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# variables\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Calculate the number of stops.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "# variables\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8 ), (4, 6), (2, 3)];\n",
+    "number_stops = 0\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "# 1. Calculate the number of stops.\n",
+    "len(stops)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 13, 11, 10, 14, 10, 7, 5, 4]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "passengers = []\n",
+    "e = 0\n",
+    "for a,b in stops:\n",
+    "    if len(passengers) == 0:\n",
+    "        c = a - b\n",
+    "        e += c\n",
+    "        passengers.append(c)\n",
+    "    else:\n",
+    "        c = a - b\n",
+    "        d = e + c\n",
+    "        e += c\n",
+    "        passengers.append(d)\n",
+    "        \n",
+    "passengers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. Find the maximum occupation of the bus.\n",
+    "max(passengers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average ocupaton of the bus is 9.33 passengers\n",
+      "The standard deviation is 3.2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "import numpy as np\n",
+    "avg_ocupation = sum(passengers)/len(passengers)\n",
+    "print(\"The average ocupaton of the bus is\", round(avg_ocupation, 2), \"passengers\")\n",
+    "\n",
+    "print(\"The standard deviation is\", round(np.std(passengers),2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 13, 11, 10, 14, 10, 7, 5, 4]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -105,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
