--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,22 +20,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 12.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
     "\n",
+    "well_height = 125\n",
+    "daily_advance = 30/24 \n",
+    "night_retreat = 20/24 \n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
+    "hours = 0\n",
     "\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n"
+    "while accumulated_distance < well_height:\n",
+    "    accumulated_distance += daily_advance - night_retreat\n",
+    "    hours += 1 \n",
+    "    days = hours/24\n",
+    "    if accumulated_distance >= well_height:\n",
+    "        print(\"Days =\", days)\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "# Print the result with print('Days =', days)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -69,33 +107,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 4\n",
+      "The maximum displacement in a day is 77 cm, the minimum is 12 cm\n",
+      "The average progress is 38.09 cm per day\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-ae86f5b1a53b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0madvance_cm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m     \u001b[0mstdev\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0mstdeviation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstdev\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madvance_cm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
-    "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
-    "# Assign 0 to the variable that represents the solution\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "well_height = 125\n",
+    "acc_distance = 0 \n",
+    "days2 = 0\n",
     "\n",
     "\n",
     "# Write the code that solves the problem\n",
     "\n",
+    "for i in advance_cm:\n",
+    "    if acc_distance < well_height:\n",
+    "        acc_distance += i \n",
+    "        days2 += 1\n",
+    "    else:\n",
+    "        pass\n",
     "\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
-    "\n",
+    "print(\"Days =\", days2)\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
     "\n",
-    "\n",
+    "print(\"The maximum displacement in a day is\",max(advance_cm),\"cm, the minimum is\",min(advance_cm), \"cm\" )\n",
     "\n",
     "# What is its average progress?\n",
-    "\n",
+    "average_progress = sum(advance_cm)/len(advance_cm)\n",
+    "print(\"The average progress is\", round(average_progress,2), \"cm per day\")\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "import  numpy as np\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "advance_cm"
    ]
   },
   {
@@ -122,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
